--- a/index.html
+++ b/index.html
@@ -1,55 +1,61 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Matchs de foot du jour</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Matchs de foot aujourd’hui</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-
   <div class="container py-5">
-    <h1 class="mb-4 text-center">Matchs de foot aujourd’hui</h1>
+    <h1 class="text-center mb-4">Matchs de foot aujourd’hui</h1>
     <div id="match-list" class="row g-4">
-      <!-- Matchs affichés ici -->
+      <!-- Matchs seront affichés ici -->
     </div>
   </div>
 
   <script>
-    const apiKey = 'TON_API_KEY_ICI'; // à remplacer !
-    const today = new Date().toISOString().split('T')[0];
-
-    fetch(`https://api.football-data.org/v4/matches?dateFrom=${today}&dateTo=${today}`, {
-      headers: { 'X-Auth-Token': apiKey }
-    })
-    .then(res => res.json())
-    .then(data => {
-      const matches = data.matches;
-      const list = document.getElementById('match-list');
-      
-      if (matches.length === 0) {
-        list.innerHTML = "<p class='text-center'>Aucun match aujourd’hui</p>";
+    // Données fictives (mock)
+    const fakeMatches = [
+      {
+        competition: "Ligue 1",
+        homeTeam: "Paris Saint-Germain",
+        awayTeam: "Olympique Lyonnais",
+        time: "20:45",
+        status: "À venir"
+      },
+      {
+        competition: "Premier League",
+        homeTeam: "Manchester City",
+        awayTeam: "Liverpool FC",
+        time: "18:30",
+        status: "Terminé"
+      },
+      {
+        competition: "Serie A",
+        homeTeam: "Juventus",
+        awayTeam: "AC Milan",
+        time: "21:00",
+        status: "En cours"
       }
+    ];
 
-      matches.forEach(match => {
-        const el = document.createElement('div');
-        el.className = 'col-md-6';
-        el.innerHTML = `
-          <div class="card p-3 shadow-sm">
-            <h5>${match.competition.name}</h5>
-            <p><strong>${match.homeTeam.name}</strong> vs <strong>${match.awayTeam.name}</strong></p>
-            <p>Heure : ${match.utcDate.slice(11, 16)} UTC</p>
-            <p>Statut : ${match.status}</p>
-          </div>
-        `;
-        list.appendChild(el);
-      });
-    })
-    .catch(err => {
-      console.error(err);
-      document.getElementById('match-list').innerHTML = "<p class='text-danger'>Erreur lors du chargement des données.</p>";
+    const list = document.getElementById("match-list");
+
+    fakeMatches.forEach(match => {
+      const el = document.createElement("div");
+      el.className = "col-md-6";
+      el.innerHTML = `
+        <div class="card p-3 shadow-sm">
+          <h5>${match.competition}</h5>
+          <p><strong>${match.homeTeam}</strong> vs <strong>${match.awayTeam}</strong></p>
+          <p>Heure : ${match.time}</p>
+          <p>Statut : ${match.status}</p>
+        </div>
+      `;
+      list.appendChild(el);
     });
   </script>
 </body>
 </html>
+
