--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Suivi des matchs</title>
+  <title>Suivi des matchs européens</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -21,20 +20,23 @@
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <h1 class="text-center mb-4">⚽ Suivi des matchs</h1>
+    <h1 class="text-center mb-4">⚽ Matchs européens à venir</h1>
 
     <!-- Filtres -->
     <div class="row mb-4">
-      <div class="col-md-6">
+      <div class="col-md-5">
         <label for="leagueSelect" class="form-label">🏆 Choisir une ligue</label>
         <select id="leagueSelect" class="form-select">
           <option value="all">Toutes</option>
           <option value="Ligue 1">Ligue 1</option>
           <option value="Premier League">Premier League</option>
           <option value="Serie A">Serie A</option>
+          <option value="Bundesliga">Bundesliga</option>
+          <option value="La Liga">La Liga</option>
+          <option value="Eredivisie">Eredivisie</option>
         </select>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <label for="daySelect" class="form-label">📅 Sélectionner le jour</label>
         <select id="daySelect" class="form-select">
           <option value="0">Aujourd’hui</option>
@@ -42,13 +44,16 @@
           <option value="2">Après-demain</option>
         </select>
       </div>
+      <div class="col-md-2 d-flex align-items-end">
+        <button class="btn btn-outline-primary w-100" id="weekBtn">🔁 Semaine</button>
+      </div>
     </div>
 
     <div id="match-list" class="row g-4"></div>
+    <p class="text-center mt-4 text-muted" id="refresh-note">🔄 Mise à jour auto toutes les 60 secondes</p>
   </div>
 
   <script>
-    // 📅 Calculer les dates
     const baseDate = new Date();
     const getDateWithOffset = (offset) => {
       const date = new Date(baseDate);
@@ -56,65 +61,50 @@
       return date.toISOString().split('T')[0];
     };
 
-    // ⚽ Données fictives avec dates
+    // 🌍 Données fictives sur plusieurs jours et ligues
     const matches = [
-      {
-        date: getDateWithOffset(0),
-        competition: "Ligue 1",
-        time: "20:45",
-        status: "À venir",
-        home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null },
-        away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null }
-      },
-      {
-        date: getDateWithOffset(1),
-        competition: "Premier League",
-        time: "18:30",
-        status: "À venir",
-        home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg", score: null },
-        away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg", score: null }
-      },
-      {
-        date: getDateWithOffset(2),
-        competition: "Serie A",
-        time: "21:00",
-        status: "À venir",
-        home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg", score: null },
-        away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg", score: null }
-      }
+      { date: getDateWithOffset(0), competition: "Ligue 1", time: "20:45", status: "À venir", home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null }, away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null }},
+      { date: getDateWithOffset(1), competition: "Premier League", time: "18:30", status: "À venir", home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg", score: null }, away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg", score: null }},
+      { date: getDateWithOffset(2), competition: "Serie A", time: "21:00", status: "À venir", home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg", score: null }, away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg", score: null }},
+      { date: getDateWithOffset(3), competition: "Bundesliga", time: "19:00", status: "À venir", home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg", score: null }, away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: null }},
+      { date: getDateWithOffset(4), competition: "La Liga", time: "20:30", status: "À venir", home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg", score: null }, away: { name: "Barcelona", logo: "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg", score: null }},
+      { date: getDateWithOffset(5), competition: "Eredivisie", time: "16:00", status: "À venir", home: { name: "Ajax", logo: "https://upload.wikimedia.org/wikipedia/en/7/79/Ajax_Amsterdam.svg", score: null }, away: { name: "PSV", logo: "https://upload.wikimedia.org/wikipedia/en/2/21/PSV_Eindhoven.svg", score: null }}
     ];
 
     const leagueSelect = document.getElementById('leagueSelect');
     const daySelect = document.getElementById('daySelect');
+    const weekBtn = document.getElementById('weekBtn');
     const matchList = document.getElementById('match-list');
 
-    function getCountdownText(matchDateStr, matchTime) {
-      const matchDateTime = new Date(`${matchDateStr}T${matchTime}:00Z`);
-      const now = new Date();
-      const diff = matchDateTime - now;
+    let showWeek = false;
 
+    function getCountdownText(dateStr, timeStr) {
+      const matchDate = new Date(`${dateStr}T${timeStr}:00Z`);
+      const now = new Date();
+      const diff = matchDate - now;
       if (diff <= 0) return "Match en cours ou terminé";
 
       const minutes = Math.floor((diff / 1000 / 60) % 60);
       const hours = Math.floor((diff / 1000 / 60 / 60));
-
       return `Débute dans ${hours}h ${minutes}min`;
     }
 
     function renderMatches() {
       const selectedLeague = leagueSelect.value;
-      const dayOffset = parseInt(daySelect.value);
-      const currentDate = getDateWithOffset(dayOffset);
+      const selectedDay = parseInt(daySelect.value);
+      const targetDate = getDateWithOffset(selectedDay);
 
-      matchList.innerHTML = "";
-
-      const filtered = matches.filter(m =>
-        (selectedLeague === "all" || m.competition === selectedLeague) &&
-        m.date === currentDate
+      let filtered = matches.filter(m => 
+        (selectedLeague === "all" || m.competition === selectedLeague)
       );
 
+      if (!showWeek) {
+        filtered = filtered.filter(m => m.date === targetDate);
+      }
+
+      matchList.innerHTML = "";
       if (filtered.length === 0) {
-        matchList.innerHTML = `<p class="text-center">Aucun match trouvé pour cette sélection.</p>`;
+        matchList.innerHTML = `<p class="text-center">Aucun match trouvé.</p>`;
         return;
       }
 
@@ -122,11 +112,11 @@
         const scoreDisplay = match.home.score !== null ? `${match.home.score} - ${match.away.score}` : "vs";
         const countdown = getCountdownText(match.date, match.time);
 
-        const col = document.createElement("div");
-        col.className = "col-md-6";
-        col.innerHTML = `
+        const div = document.createElement("div");
+        div.className = "col-md-6";
+        div.innerHTML = `
           <div class="card p-3 shadow-sm">
-            <h5 class="text-muted">${match.competition}</h5>
+            <h6 class="text-muted">${match.competition} — ${match.date}</h6>
             <div class="d-flex align-items-center justify-content-between">
               <div class="d-flex align-items-center">
                 <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
@@ -142,16 +132,26 @@
             <p class="text-primary">${countdown}</p>
           </div>
         `;
-        matchList.appendChild(col);
+        matchList.appendChild(div);
       });
     }
 
     leagueSelect.addEventListener("change", renderMatches);
-    daySelect.addEventListener("change", renderMatches);
+    daySelect.addEventListener("change", () => {
+      showWeek = false;
+      renderMatches();
+    });
 
-    renderMatches(); // premier affichage
+    weekBtn.addEventListener("click", () => {
+      showWeek = true;
+      renderMatches();
+    });
+
+    // ⏱️ Rafraîchissement toutes les 60s
+    setInterval(renderMatches, 60000);
+
+    renderMatches();
   </script>
 </body>
 </html>
-
 
