--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Suivi des matchs européens</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Matchs Européens</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .team-logo {
@@ -26,7 +26,7 @@
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <h1 class="text-center mb-4">⚽ Matchs européens à venir</h1>
+    <h1 class="text-center mb-4">⚽ Matchs Européens à venir</h1>
 
     <div class="row mb-4">
       <div class="col-md-5">
@@ -38,11 +38,10 @@
           <option value="Serie A">Serie A</option>
           <option value="Bundesliga">Bundesliga</option>
           <option value="La Liga">La Liga</option>
-          <option value="Eredivisie">Eredivisie</option>
         </select>
       </div>
       <div class="col-md-5">
-        <label for="daySelect" class="form-label">📅 Sélectionner le jour</label>
+        <label for="daySelect" class="form-label">📅 Choisir un jour</label>
         <select id="daySelect" class="form-select">
           <option value="0">Aujourd’hui</option>
           <option value="1">Demain</option>
@@ -55,7 +54,7 @@
     </div>
 
     <div id="match-list" class="row g-4"></div>
-    <p class="text-center mt-4 text-muted" id="refresh-note">🔄 Mise à jour auto toutes les 60 secondes</p>
+    <p class="text-center mt-4 text-muted">🔄 Mise à jour toutes les 60 secondes</p>
   </div>
 
   <script>
@@ -71,45 +70,32 @@
         date: getDateWithOffset(0),
         competition: "Ligue 1",
         time: "20:45",
-        status: "À venir",
-        home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null },
-        away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null },
+        home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg" },
+        away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg" },
         broadcast: { name: "Amazon Prime", paid: true, url: "https://www.amazon.fr/gp/video/storefront" }
       },
       {
         date: getDateWithOffset(1),
         competition: "Premier League",
         time: "18:30",
-        status: "À venir",
-        home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg", score: null },
-        away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg", score: null },
+        home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg" },
+        away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" },
         broadcast: { name: "RMC Sport", paid: true, url: "https://rmcsport.bfmtv.com" }
       },
       {
         date: getDateWithOffset(2),
         competition: "Serie A",
         time: "21:00",
-        status: "À venir",
-        home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg", score: null },
-        away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg", score: null },
+        home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg" },
+        away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg" },
         broadcast: { name: "beIN Sports", paid: true, url: "https://www.beinsports.com/france/" }
       },
       {
         date: getDateWithOffset(3),
-        competition: "Bundesliga",
-        time: "19:00",
-        status: "À venir",
-        home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg", score: null },
-        away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: null },
-        broadcast: { name: "Canal+", paid: true, url: "https://www.canalplus.com/direct" }
-      },
-      {
-        date: getDateWithOffset(4),
         competition: "La Liga",
         time: "20:30",
-        status: "À venir",
-        home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg", score: null },
-        away: { name: "Barcelona", logo: "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg", score: null },
+        home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg" },
+        away: { name: "Barcelona", logo: "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg" },
         broadcast: { name: "L'Équipe TV", paid: false }
       }
     ];
@@ -120,23 +106,12 @@
     const matchList = document.getElementById('match-list');
     let showWeek = false;
 
-    function getCountdownText(dateStr, timeStr) {
-      const matchDate = new Date(`${dateStr}T${timeStr}:00Z`);
-      const now = new Date();
-      const diff = matchDate - now;
-      if (diff <= 0) return "Match en cours ou terminé";
-
-      const minutes = Math.floor((diff / 1000 / 60) % 60);
-      const hours = Math.floor((diff / 1000 / 60 / 60));
-      return `Débute dans ${hours}h ${minutes}min`;
-    }
-
     function renderMatches() {
       const selectedLeague = leagueSelect.value;
       const selectedDay = parseInt(daySelect.value);
       const targetDate = getDateWithOffset(selectedDay);
 
-      let filtered = matches.filter(m => 
+      let filtered = matches.filter(m =>
         (selectedLeague === "all" || m.competition === selectedLeague)
       );
 
@@ -145,21 +120,18 @@
       }
 
       matchList.innerHTML = "";
+
       if (filtered.length === 0) {
         matchList.innerHTML = `<p class="text-center">Aucun match trouvé.</p>`;
         return;
       }
 
       filtered.forEach(match => {
-        const scoreDisplay = match.home.score !== null ? `${match.home.score} - ${match.away.score}` : "vs";
-        const countdown = getCountdownText(match.date, match.time);
-
-        const broadcastInfo = match.broadcast ? `
-          <p class="mb-0">📺 Diffusion : 
-            ${match.broadcast.paid ? 
-              `<a href="${match.broadcast.url}" target="_blank" class="text-danger text-decoration-none fw-bold">${match.broadcast.name} 🔒</a>` :
-              `<span class="fw-semibold">${match.broadcast.name}</span>`}
-          </p>` : '';
+        const broadcastHtml = match.broadcast ? (
+          match.broadcast.paid ?
+            `📺 <a href="${match.broadcast.url}" target="_blank" class="text-danger fw-bold text-decoration-none">${match.broadcast.name} 🔒</a>` :
+            `📺 <span class="text-success fw-semibold">${match.broadcast.name}</span>`
+        ) : '';
 
         const div = document.createElement("div");
         div.className = "col-md-6";
@@ -171,15 +143,14 @@
                 <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
                 <span class="team-name">${match.home.name}</span>
               </div>
-              <div class="vs">${scoreDisplay}</div>
+              <div class="vs">vs</div>
               <div class="d-flex align-items-center">
                 <span class="team-name">${match.away.name}</span>
                 <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
               </div>
             </div>
-            <p class="mb-0 mt-2">Heure : ${match.time}</p>
-            <p class="text-primary">${countdown}</p>
-            ${broadcastInfo}
+            <p class="mb-0 mt-2">🕒 ${match.time}</p>
+            <p class="mb-0">${broadcastHtml}</p>
           </div>
         `;
         matchList.appendChild(div);
@@ -201,5 +172,6 @@
   </script>
 </body>
 </html>
+
 
 
