--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       text-overflow: ellipsis;
       max-width: 120px;
     }
+    .live-badge {
+      background-color: red;
+      color: white;
+      font-weight: bold;
+      padding: 2px 8px;
+      border-radius: 12px;
+      font-size: 0.8rem;
+    }
   </style>
 </head>
 <body class="bg-light">
@@ -92,6 +100,14 @@
       },
       {
         date: getDateWithOffset(3),
+        competition: "Bundesliga",
+        time: "19:00",
+        home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg" },
+        away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" },
+        broadcast: { name: "Canal+", paid: true, url: "https://www.canalplus.com" }
+      },
+      {
+        date: getDateWithOffset(4),
         competition: "La Liga",
         time: "20:30",
         home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg" },
@@ -105,6 +121,13 @@
     const weekBtn = document.getElementById('weekBtn');
     const matchList = document.getElementById('match-list');
     let showWeek = false;
+
+    function isMatchLive(dateStr, timeStr) {
+      const matchStart = new Date(`${dateStr}T${timeStr}:00`);
+      const matchEnd = new Date(matchStart.getTime() + 2 * 60 * 60 * 1000);
+      const now = new Date();
+      return now >= matchStart && now <= matchEnd;
+    }
 
     function renderMatches() {
       const selectedLeague = leagueSelect.value;
@@ -127,6 +150,9 @@
       }
 
       filtered.forEach(match => {
+        const isLive = isMatchLive(match.date, match.time);
+        const liveBadge = isLive ? `<span class="live-badge">🔴 Live</span>` : "";
+
         const broadcastHtml = match.broadcast ? (
           match.broadcast.paid ?
             `📺 <a href="${match.broadcast.url}" target="_blank" class="text-danger fw-bold text-decoration-none">${match.broadcast.name} 🔒</a>` :
@@ -137,7 +163,10 @@
         div.className = "col-md-6";
         div.innerHTML = `
           <div class="card p-3 shadow-sm">
-            <h6 class="text-muted">${match.competition} — ${match.date}</h6>
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="text-muted">${match.competition} — ${match.date}</h6>
+              ${liveBadge}
+            </div>
             <div class="d-flex align-items-center justify-content-between">
               <div class="d-flex align-items-center">
                 <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
@@ -172,6 +201,7 @@
   </script>
 </body>
 </html>
+
 
 
 
