--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Matchs Européens</title>
+  <meta charset="UTF-8">
+  <title>Suivi des matchs européens</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .team-logo {
@@ -16,26 +16,13 @@
       font-size: 1.2rem;
       margin: 0 10px;
     }
-    .team-name {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      max-width: 120px;
-    }
-    .live-badge {
-      background-color: red;
-      color: white;
-      font-weight: bold;
-      padding: 2px 8px;
-      border-radius: 12px;
-      font-size: 0.8rem;
-    }
   </style>
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <h1 class="text-center mb-4">⚽ Matchs Européens à venir</h1>
+    <h1 class="text-center mb-4">⚽ Matchs européens à venir</h1>
 
+    <!-- Filtres -->
     <div class="row mb-4">
       <div class="col-md-5">
         <label for="leagueSelect" class="form-label">🏆 Choisir une ligue</label>
@@ -46,10 +33,11 @@
           <option value="Serie A">Serie A</option>
           <option value="Bundesliga">Bundesliga</option>
           <option value="La Liga">La Liga</option>
+          <option value="Eredivisie">Eredivisie</option>
         </select>
       </div>
       <div class="col-md-5">
-        <label for="daySelect" class="form-label">📅 Choisir un jour</label>
+        <label for="daySelect" class="form-label">📅 Sélectionner le jour</label>
         <select id="daySelect" class="form-select">
           <option value="0">Aujourd’hui</option>
           <option value="1">Demain</option>
@@ -62,7 +50,7 @@
     </div>
 
     <div id="match-list" class="row g-4"></div>
-    <p class="text-center mt-4 text-muted">🔄 Mise à jour toutes les 60 secondes</p>
+    <p class="text-center mt-4 text-muted" id="refresh-note">🔄 Mise à jour auto toutes les 60 secondes</p>
   </div>
 
   <script>
@@ -73,46 +61,55 @@
       return date.toISOString().split('T')[0];
     };
 
+    // 🗂️ Données de matchs avec chaînes TV
     const matches = [
       {
         date: getDateWithOffset(0),
         competition: "Ligue 1",
         time: "20:45",
-        home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg" },
-        away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg" },
-        broadcast: { name: "Amazon Prime", paid: true, url: "https://www.amazon.fr/gp/video/storefront" }
+        home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null },
+        away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null },
+        channel: { name: "Amazon Prime Video", url: "https://www.primevideo.com", isPaid: true }
       },
       {
         date: getDateWithOffset(1),
         competition: "Premier League",
         time: "18:30",
-        home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg" },
-        away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" },
-        broadcast: { name: "RMC Sport", paid: true, url: "https://rmcsport.bfmtv.com" }
+        home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg", score: null },
+        away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg", score: null },
+        channel: { name: "Canal+ Sport", url: "https://www.canalplus.com", isPaid: true }
       },
       {
         date: getDateWithOffset(2),
         competition: "Serie A",
         time: "21:00",
-        home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg" },
-        away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg" },
-        broadcast: { name: "beIN Sports", paid: true, url: "https://www.beinsports.com/france/" }
+        home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg", score: null },
+        away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg", score: null },
+        channel: { name: "beIN Sports", url: "https://www.beinsports.com", isPaid: true }
       },
       {
         date: getDateWithOffset(3),
         competition: "Bundesliga",
         time: "19:00",
-        home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg" },
-        away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" },
-        broadcast: { name: "Canal+", paid: true, url: "https://www.canalplus.com" }
+        home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg", score: null },
+        away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: null },
+        channel: { name: "OneFootball", url: "https://www.onefootball.com", isPaid: false }
       },
       {
         date: getDateWithOffset(4),
         competition: "La Liga",
         time: "20:30",
-        home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg" },
-        away: { name: "Barcelona", logo: "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg" },
-        broadcast: { name: "L'Équipe TV", paid: false }
+        home: { name: "Real Madrid", logo: "https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg", score: null },
+        away: { name: "Barcelona", logo: "https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg", score: null },
+        channel: { name: "DAZN", url: "https://www.dazn.com", isPaid: true }
+      },
+      {
+        date: getDateWithOffset(5),
+        competition: "Eredivisie",
+        time: "16:00",
+        home: { name: "Ajax", logo: "https://upload.wikimedia.org/wikipedia/en/7/79/Ajax_Amsterdam.svg", score: null },
+        away: { name: "PSV", logo: "https://upload.wikimedia.org/wikipedia/en/2/21/PSV_Eindhoven.svg", score: null },
+        channel: { name: "ESPN NL", url: "https://www.espn.nl", isPaid: false }
       }
     ];
 
@@ -122,11 +119,16 @@
     const matchList = document.getElementById('match-list');
     let showWeek = false;
 
-    function isMatchLive(dateStr, timeStr) {
+    function getMatchStatus(dateStr, timeStr) {
       const matchStart = new Date(`${dateStr}T${timeStr}:00`);
       const matchEnd = new Date(matchStart.getTime() + 2 * 60 * 60 * 1000);
       const now = new Date();
-      return now >= matchStart && now <= matchEnd;
+
+      if (now >= matchEnd) return { text: "✅ Terminé", class: "text-muted" };
+      if (now >= matchStart && now <= matchEnd) return { text: "🔴 En direct", class: "text-danger fw-bold" };
+
+      const diffMin = Math.round((matchStart - now) / 60000);
+      return { text: `⏳ Débute dans ${diffMin} min`, class: "text-primary fw-semibold" };
     }
 
     function renderMatches() {
@@ -143,43 +145,40 @@
       }
 
       matchList.innerHTML = "";
-
       if (filtered.length === 0) {
         matchList.innerHTML = `<p class="text-center">Aucun match trouvé.</p>`;
         return;
       }
 
       filtered.forEach(match => {
-        const isLive = isMatchLive(match.date, match.time);
-        const liveBadge = isLive ? `<span class="live-badge">🔴 Live</span>` : "";
-
-        const broadcastHtml = match.broadcast ? (
-          match.broadcast.paid ?
-            `📺 <a href="${match.broadcast.url}" target="_blank" class="text-danger fw-bold text-decoration-none">${match.broadcast.name} 🔒</a>` :
-            `📺 <span class="text-success fw-semibold">${match.broadcast.name}</span>`
-        ) : '';
+        const scoreDisplay = match.home.score !== null ? `${match.home.score} - ${match.away.score}` : "vs";
+        const status = getMatchStatus(match.date, match.time);
+        const channelLink = match.channel
+          ? `<a href="${match.channel.url}" target="_blank" class="${match.channel.isPaid ? 'text-danger' : 'text-success'} text-decoration-none">
+              📺 ${match.channel.name}${match.channel.isPaid ? ' 🔒' : ''}
+            </a>` : "";
 
         const div = document.createElement("div");
         div.className = "col-md-6";
         div.innerHTML = `
           <div class="card p-3 shadow-sm">
-            <div class="d-flex justify-content-between align-items-center">
-              <h6 class="text-muted">${match.competition} — ${match.date}</h6>
-              ${liveBadge}
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h6 class="text-muted mb-0">${match.competition} — ${match.date}</h6>
+              <span class="${status.class}">${status.text}</span>
             </div>
             <div class="d-flex align-items-center justify-content-between">
               <div class="d-flex align-items-center">
                 <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
-                <span class="team-name">${match.home.name}</span>
+                <span>${match.home.name}</span>
               </div>
-              <div class="vs">vs</div>
+              <div class="vs">${scoreDisplay}</div>
               <div class="d-flex align-items-center">
-                <span class="team-name">${match.away.name}</span>
+                <span>${match.away.name}</span>
                 <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
               </div>
             </div>
-            <p class="mb-0 mt-2">🕒 ${match.time}</p>
-            <p class="mb-0">${broadcastHtml}</p>
+            <p class="mb-0 mt-2">Heure : ${match.time}</p>
+            <p>${channelLink}</p>
           </div>
         `;
         matchList.appendChild(div);
@@ -191,16 +190,19 @@
       showWeek = false;
       renderMatches();
     });
+
     weekBtn.addEventListener("click", () => {
       showWeek = true;
       renderMatches();
     });
 
-    setInterval(renderMatches, 60000);
+    setInterval(renderMatches, 60000); // Mise à jour automatique
+
     renderMatches();
   </script>
 </body>
 </html>
+
 
 
 
